    HAMA-25: Add matrix addition example (edwardyoon)
    HAMA-23: Add Hama configuration files (edwardyoon)
    HAMA-6: Add a 'who we are' page (edwardyoon)
    HAMA-7: Add some information for a new comer (edwardyoon)
    HAMA-1: Create the Hama web site (edwardyoon via Ian Holsman)
    HAMA-2: The intial donation of Hama from the google project (edwardyoon)

  IMPROVEMENTS
    
    HAMA-325: Add package.html to each package and few comments (edwardyoon)
    HAMA-322: JUnit test threads with GroboTestingJUnit (Filipe Manana via edwardyoon)
    HAMA-323: Remove generic warnings (edwardyoon)
    HAMA-254: Add news about rid of MapReduce and Hbase (edwardyoon)
    HAMA-320: Add twitter widget to website (edwardyoon)
    HAMA-300: Refactoring launchTask() method in GroomServer (edwardyoon)
    HAMA-311: Add unit tests for IPC package (edwardyoon)
    HAMA-312: Add serialize printing to ExampleDriver (edwardyoon)
    HAMA-309: Add unit tests for Bytes utilities (edwardyoon)
    HAMA-299: Remove unused field 'task' from GroomServer (edwardyoon)
    HAMA-297: Add missing Apache License header to source files. (edwardyoon)
    HAMA-268: Implement BSPMaster's all methods extended 
                from JobSubmissionProtocol (hyunsik via edwardyoon)
    HAMA-295: Removing HBase dependency (edwardyoon)
    HAMA-294: Change log level of "Got heartbeatResponse.." messages
                to debug (edwardyoon)
    HAMA-256: Removing M/R and HBase based implementations (edwardyoon)
    HAMA-293: Add starter classes for ZooKeeper, BSPMaster
                and GroomServer (Filipe Manana via edwardyoon)
    HAMA-286: Task progress should be monitored (eddieyoon)
    HAMA-287: BSPMaster should use the bsp.master.port property when creating
                its InetSocketAddr instance (Filipe Manana via edwardyoon)
    HAMA-283: Removing duplicate code (Filipe Manana via edwardyoon)
    HAMA-277: Add default number of bsp task (edwardyoon)